--- a/src/html/add-type-livraison.html
+++ b/src/html/add-type-livraison.html
@@ -48,6 +48,10 @@
             cursor: pointer;
         }
 
+        body {
+            background: linear-gradient(to right, #ff6701, #ff2600);
+        }
+
         #addPairBtn {
             transform: translate(7%);
         }
@@ -64,7 +68,7 @@
 </head>
 
 <body>
-    <div class="page-main bg-gra-02 p-t-130 p-b-100 font-poppins">
+    <div class="page-main  p-t-130 p-b-100 font-poppins">
         <div class="main main--w680">
             <div class="card card-4">
                 <div class="card-body">
