--- a/src/html/wishlist.html
+++ b/src/html/wishlist.html
@@ -547,8 +547,8 @@
             const wishlistElement = document.getElementById('wishlist');
             wishlistElement.innerHTML = '';
             wishlistData.forEach((item) => {
-                // const itemElement = document.createElement('div');
-                itemElement.setAttribute('data-id', item._id);
+                const itemElement = document.createElement('div');
+                // itemElement.setAttribute('data-id', item._id);
                 itemElement.innerHTML = `
              
                 <div   class="item">
