--- a/src/html/add-cat.html
+++ b/src/html/add-cat.html
@@ -10,6 +10,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <style>
+        body{
+            background: linear-gradient(to right, #ff6701, #ff2600);
+        }
         .container {
             max-width: 400px;
             margin: 0 auto;
@@ -56,7 +59,7 @@
 </head>
 
 <body>
-    <div class="page-main bg-gra-02 p-t-130 p-b-100 font-poppins">
+    <div class="page-main  p-t-130 p-b-100 font-poppins">
         <div class="main main--w680">
             <div class="card card-4">
                 <div class="card-body">
