--- a/product-details.html
+++ b/product-details.html
@@ -567,7 +567,7 @@
                                     <div class="media">
                                         <div class="thumbnail object-cover">
                                             <a href="#">
-                                                <img src="assets/products/apparel1.jpg" alt="">
+                                                <img src="images/SHOES.svg" alt="">
                                             </a>
                                         </div>
                                         <div class="hoverable">
@@ -584,7 +584,7 @@
                                             <div class="stars"></div>
                                             <span class="mini-text">(1,955)</span>
                                         </div>
-                                        <h3><a href="#">Under Armour Men's Tech</a></h3>
+                                        <h3><a href="#">Under Asfdjfdk kljl lkjl jl kjl kjlkjl kjl kjlkj lkjl jlk jlk jlkj lkj lklkj rmour Men's Tech</a></h3>
                                         <div class="price">
                                             <span class="current">$56.50</span>
                                             <span class="normal mini-text">$75.50</span>
