--- a/src/html/dash-1.html
+++ b/src/html/dash-1.html
@@ -183,7 +183,7 @@
               <div class="sales">Sales</div>
             </button><button class="nav">
               <img class="shopping-cart-1-icon" alt="" src="../../public/product-1-1.svg" />
-              <div class="sales">Products</div>
+              <div class="sales"><a href="../html/dash_product.html">Products</a></div>
             </button>
             <button id="addtyli" class="nav3">
               <img class="shopping-cart-1-icon" alt="" src="../../img/add.png" />
