--- a/home.html
+++ b/home.html
@@ -15,7 +15,7 @@
         <aside class="site-off desktop-hide">
             <div class="off-canvas">
                 <div class="canvas-head flexitem">
-                    <div class="logo"><a href="/"><img src="./assets/banner/logo54 1.png" alt=""></span>Buy-it</a></div>
+                    <div class="logo"><a href=""><img src="./assets/banner/logo54 1.png" alt=""></span>Buy-it</a></div>
                     <a href="#" class="t-close flexcenter"><i class="ri-close-line"></i></a>
                 </div>
                 <div class="departments"></div>
