--- a/src/html/product.html
+++ b/src/html/product.html
@@ -392,6 +392,9 @@
 
   <script>
     var ab = sessionStorage.getItem('token')
+
+    console.log(localStorage.getItem("productIdSeller"));
+
     console.log(ab)
   </script>
   <script>
