--- a/src/html/dash-1.html
+++ b/src/html/dash-1.html
@@ -181,9 +181,10 @@
             </button><button class="nav">
               <img class="shopping-cart-1-icon" alt="" src="../../public/shoppingcart-1.svg" />
               <div class="sales">Sales</div>
-            </button><button class="nav" id="produita">
+            </button>
+            <button class="nav" id="produita">
               <img class="shopping-cart-1-icon" alt="" src="../../public/product-1-1.svg" />
-              <div class="sales"><a href="../html/dash_product.html">Products</a></div>
+              <div class="sales"><a>Products</a></div>
             </button>
             <button id="addtyli" class="nav3">
               <img class="shopping-cart-1-icon" alt="" src="../../img/add.png" />
@@ -245,7 +246,7 @@
     const produit = document.getElementById('produita');
     produit.addEventListener('click', function () {
       // Navigate to the desired page
-      window.location.href = './product.html'; // Replace 'page-x.html' with the actual page URL
+      window.location.href = '../html/dash_product.html'; // Replace 'page-x.html' with the actual page URL
     });
 
     function addOrder(photo, productName, date, clientName, price, status) {
