--- a/src/html/wishlist.html
+++ b/src/html/wishlist.html
@@ -15,7 +15,12 @@
 
 
 </head>
-
+<style>
+    .item{
+        min-width: 250px;
+        max-width: 300px;
+    }
+</style>
 <body>
     <div id="page" class="site page-single">
         <aside class="site-off desktop-hide">
