--- a/src/html/wishlist.html
+++ b/src/html/wishlist.html
@@ -16,11 +16,15 @@
 
 </head>
 <style>
-    .item{
+    .item {
         min-width: 250px;
         max-width: 300px;
     }
+    .active{
+        cursor: pointer;
+    }
 </style>
+
 <body>
     <div id="page" class="site page-single">
         <aside class="site-off desktop-hide">
@@ -64,10 +68,11 @@
             <div class="header-nav">
                 <div class="container">
                     <div class="wrapper flexitem">
+                        <!-- ./assets/banner/logo54 1.png -->
                         <a href="#" class="trigger desktop-hide"><span class="i ri-menu-2-line"></span></a>
                         <div class="left flexitem">
-                            <!-- <div class="logo"><a href="/"><img src="./assets/banner/logo54 1.png"
-                                        alt=""></span>Buy-it</a></div> -->
+                            <div class="logo"><a href="../../home.html"><img src="../../assets/banner/logo54 1.png"
+                                        alt=""></span>Buy-it</a></div>
                             <nav class="mobile-hide">
                                 <ul class="flexitem second-links">
                                     <li><a href="index.html">Home</a></li>
