--- a/home.html
+++ b/home.html
@@ -31,6 +31,7 @@
                             <ul class="flexitem main-links">
                                 <li><a href="#">Blog</a></li>
                                 <li><a href="#">New Products</a></li>
+                                <li><a href="/src/html/commandes.html">My orders</a></li>
                                 <li id="wishlist-home"><a  href="#">Wishlist</a></li>
                             </ul>
                         </div>
