cbn lpanier rah yafficher les prt

--- a/src/html/categoriesPage.html
+++ b/src/html/categoriesPage.html
@@ -129,7 +129,7 @@
                                 <div class="wrapper">
                                     <div class="column">
                                         <div class="sectop flexitem">
-                                            <h2><span class="circle"></span><span>Search Result</span></h2>
+                                            <h2><span class="circle"></span><span id="category-text">Category's Products</span></h2>
                                             <div class="second-links">
                                                 <a href="#" class="view-all">Filter</a>
                                             </div>
@@ -334,5 +334,5 @@
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
-<script src="../js/search.js"></script>
+<script src="../js/categoriesPage.js"></script>
 </html>
