--- a/src/html/cart.html
+++ b/src/html/cart.html
@@ -105,10 +105,10 @@
                         </div>
                         <div class="right">
                             <div class="search-box">
-                                <form action="" class="search">
+                                <form action="" id="myform" class="search">
                                     <span class="icon-large"><i class="ri-search-line"></i></span>
-                                    <input type="search" placeholder="Search for products">
-                                    <button type="submit">Search</button>
+                                    <input id="searchis" type="search" placeholder="Search">
+                                    <button id="search-btn" type="submit">Search</button>
                                 </form>
                             </div>
                         </div>
@@ -141,21 +141,21 @@
                                 <button type="submit">Apply</button>
                             </form>
                             <div class="subtotal">
-                                <div class="text">Subtotal 6 items</div>
-                                <div class="price">150 USD</div>
+                                <div id="subtotal-items" class="text">Subtotal</div>
+                                <div id="subtotal-price" class="price">0</div>
                             </div>
                             <div class="subtotal">
                                 <div class="text">Coupoun Discount</div>
-                                <div class="price">150 USD</div>
+                                <div id="coupoun-discount" class="price">0</div>
                             </div>
                             <div class="Shipping">
                                 <div class="text">Shipping Cost</div>
-                                <div class="price">Free</div>
+                                <div id="shipping-price" class="price">0</div>
                             </div>
                             <div class="line"></div>
                             <div class="total">
                                 <div class="text">Total</div>
-                                <div class="price">1500 USD</div>
+                                <div id="total-price-summary" class="price">0</div>
                             </div>
                             <button id="checkout" class="checkout">CHECKOUT</button>
         
@@ -324,11 +324,13 @@
         <div class="search-bottom desktop-hide">
             <div class="container">
                 <div class="wrapper">
-                    <form action="" class="search">
+                    <form id="myformone" class="search">
                         <a href="#" class="t-close search-close flexcenter"><i class="ri-close-line"></i></a>
-                        <span class="icon-large"><i class="ri-search-line"></i></span>
-                        <input type="search" placeholder="Search" required>
-                        <button type="submit">Search</button>
+
+                            <span class="icon-large"><i class="ri-search-line"></i></span>
+                            <input id="searchisis" type="search" placeholder="Search for products">
+                            <button onclick="searchclick()"  id="searchis-btn" type="submit">Search</button>
+                        
                     </form>
                 </div>
             </div>
